# entidb

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  README.md  build_and_test.py  clippy.toml  reusable_prompt.md  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build-apple-libs.yml  ci.yml  dart.yml  python.yml  release.yml
artifacts-download/ios-entidb_ffi-xcframework/: Info.plist
bindings/dart/entidb_dart/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
bindings/dart/entidb_dart/lib/: entidb_dart.dart
bindings/dart/entidb_dart/lib/src/: bindings.dart  codec.dart  collection.dart  crypto.dart  database.dart  entity_id.dart  error.dart  iterator.dart  transaction.dart  typed_collection.dart
bindings/dart/entidb_dart/test/: crypto_test.dart  entidb_dart_test.dart  test_vectors_test.dart
bindings/flutter/entidb_flutter/: .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
bindings/flutter/entidb_flutter/android/: build.gradle
bindings/flutter/entidb_flutter/ios/: entidb_flutter.podspec
bindings/flutter/entidb_flutter/ios/Frameworks/: README.md
bindings/flutter/entidb_flutter/lib/: entidb_flutter.dart
bindings/flutter/entidb_flutter/linux/: CMakeLists.txt
bindings/flutter/entidb_flutter/macos/: entidb_flutter.podspec
bindings/flutter/entidb_flutter/windows/: CMakeLists.txt
bindings/python/entidb_py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
bindings/python/entidb_py/src/: lib.rs
bindings/python/entidb_py/tests/: test_crypto.py  test_entidb.py  test_vectors.py
crates/entidb_bench/: Cargo.toml
crates/entidb_bench/benches/: codec.rs  database.rs  storage.rs
crates/entidb_bench/src/: lib.rs  utils.rs
crates/entidb_cli/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_cli/src/: main.rs
crates/entidb_cli/src/commands/: backup.rs  compact.rs  dump_oplog.rs  inspect.rs  migrate.rs  mod.rs  verify.rs
crates/entidb_codec/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_codec/src/: decoder.rs  encoder.rs  error.rs  lib.rs  value.rs
crates/entidb_core/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_core/src/: backup.rs  change_feed.rs  config.rs  database.rs  dir.rs  error.rs  lib.rs  manifest.rs  migration.rs  stats.rs  types.rs
crates/entidb_core/src/collection/: codec.rs  mod.rs  typed.rs
crates/entidb_core/src/crypto/: encrypted.rs  mod.rs
crates/entidb_core/src/entity/: id.rs  mod.rs  store.rs
crates/entidb_core/src/index/: btree.rs  composite.rs  engine.rs  fts.rs  hash.rs  mod.rs  persistence.rs  traits.rs
crates/entidb_core/src/segment/: compaction.rs  mod.rs  record.rs  store.rs
crates/entidb_core/src/transaction/: manager.rs  mod.rs  state.rs
crates/entidb_core/src/wal/: iterator.rs  mod.rs  record.rs  writer.rs
crates/entidb_ffi/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_ffi/src/: buffer.rs  crypto.rs  database.rs  error.rs  iterator.rs  lib.rs  transaction.rs  types.rs
crates/entidb_storage/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_storage/src/: backend.rs  encrypted.rs  error.rs  file.rs  lib.rs  memory.rs
crates/entidb_sync_engine/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_sync_engine/src/: config.rs  db_applier.rs  error.rs  http.rs  lib.rs  state.rs  transport.rs
crates/entidb_sync_engine/tests/: integration.rs
crates/entidb_sync_protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_sync_protocol/src/: change_feed.rs  conflict.rs  lib.rs  messages.rs  operation.rs  oplog.rs
crates/entidb_sync_server/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_sync_server/src/: auth.rs  config.rs  error.rs  handler.rs  lib.rs  oplog.rs  server.rs
crates/entidb_testkit/: CHANGELOG.md  Cargo.toml  README.md
crates/entidb_testkit/src/: crash.rs  fixtures.rs  fuzz.rs  generators.rs  golden.rs  integration.rs  lib.rs  stress.rs  vectors.rs
doc/: architecture.md
docs/: acceptance_criteria.md  access_paths.md  api_reference.md  architecture.md  bindings_contract.md  cbor_cannonical.md  cli_guide.md  critique.md  file_format.md  invariants.md  performance.md  quickstart.md  sync_protocol.md  transactions.md
docs/api/: dart_api.md  python_api.md
docs/publish/: entidb_flutter.md  order.md
docs/test_vectors/: README.md  cbor.json  entity_id.json  segment.json  wal.json
docs/todo/: ergonomics_03Jan2026_1.md  todo.md  todo_01Jan2025_2.md  todo_01Jan2026_1.md  todo_02Jan2025_1.md  todo_02Jan2026_1.md  todo_02Jan2026_2.md  todo_02Jan2026_3.md  todo_31Dec2025.md  todo_31Dec2025_2.md  todo_31Dec2025_3.md
examples/dart_todo/: README.md  main.dart  pubspec.yaml
examples/flutter_todo/: README.md  pubspec.yaml
examples/flutter_todo/android/app/: build.gradle.kts
examples/flutter_todo/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter_todo/lib/: main.dart
examples/flutter_todo/linux/flutter/: generated_plugins.cmake
examples/flutter_todo/linux/runner/: my_application.cc
examples/flutter_todo/macos/Runner.xcodeproj/: project.pbxproj
examples/flutter_todo/test/: widget_test.dart
examples/flutter_todo/windows/flutter/: generated_plugins.cmake
examples/python_todo/: README.md  main.py
examples/rust_expenses/: Cargo.toml  README.md  main.rs
examples/rust_notes/: Cargo.toml  README.md  main.rs
examples/rust_todo/: Cargo.toml  README.md  main.rs
web/entidb_wasm/: Cargo.toml  README.md
web/entidb_wasm/src/: database.rs  entity.rs  error.rs  lib.rs  utils.rs
web/entidb_wasm/src/backend/: indexeddb.rs  memory.rs  mod.rs  opfs.rs  persistent.rs
web/examples/basic/: .gitignore  README.md  index.html  main.js  package.json  vite.config.js
web/examples/notes-app/: .gitignore  README.md  app.js  index.html  package.json  store.js  vite.config.js
web/examples/todo-app/: .gitignore  README.md  app.js  cbor.js  index.html  package.json  store.js  vite.config.js
web/examples/worker/: README.md  client.js  index.html  main.js  package.json  shared.js  vite.config.js  worker.js
(+8 files in other folders)
