[workspace]
resolver = "2"
members = [
    "crates/entidb_storage",
    "crates/entidb_codec",
    "crates/entidb_core",
    "crates/entidb_ffi",
    "crates/entidb_sync_protocol",
    "crates/entidb_sync_engine",
    "crates/entidb_sync_server",
    "crates/entidb_cli",
    "crates/entidb_testkit",
    "crates/entidb_bench",
    "bindings/python/entidb_py",
    "examples/rust_todo",
    "examples/rust_notes",
    "examples/rust_expenses",
]

[workspace.package]
version = "2.0.0-alpha.3"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tembocs/entidb"
homepage = "https://github.com/Tembocs/entidb"
documentation = "https://docs.rs/entidb_core"
authors = ["Tembocs"]
keywords = ["database", "embedded", "entity", "nosql", "cbor"]
categories = ["database-implementations", "data-structures"]

[workspace.dependencies]
# Internal crates
entidb_storage = { path = "crates/entidb_storage", version = "2.0.0-alpha.3" }
entidb_codec = { path = "crates/entidb_codec", version = "2.0.0-alpha.3" }
entidb_core = { path = "crates/entidb_core", version = "2.0.0-alpha.3" }
entidb_ffi = { path = "crates/entidb_ffi", version = "2.0.0-alpha.3" }
entidb_sync_protocol = { path = "crates/entidb_sync_protocol", version = "2.0.0-alpha.3" }
entidb_sync_engine = { path = "crates/entidb_sync_engine", version = "2.0.0-alpha.3" }
entidb_sync_server = { path = "crates/entidb_sync_server", version = "2.0.0-alpha.3" }
entidb_testkit = { path = "crates/entidb_testkit", version = "2.0.0-alpha.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"

# Error handling
thiserror = "1.0"

# Utilities
bytes = "1.5"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
fs2 = "0.4"

# Async (for sync server)
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["derive"] }

# Testing
proptest = "1.4"
tempfile = "3.9"
criterion = "0.5"
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Note: pedantic is disabled in CI to avoid overly strict lints
# Developers can run `cargo clippy -- -W clippy::pedantic` locally if desired
# Allow unwrap/expect in test code - projects use these in tests per AGENTS.md
unwrap_used = "allow"
expect_used = "allow"
# Allow common code patterns that clippy::all flags
type_complexity = "allow"
extra_unused_lifetimes = "allow"
derivable_impls = "allow"
or_fun_call = "allow"
op_ref = "allow"
unwrap_or_default = "allow"
for_kv_map = "allow"
io_other_error = "allow"
redundant_closure = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds in development
opt-level = 0
debug = true

[profile.test]
# Faster test builds
opt-level = 0
debug = true
