[package]
name = "entidb_bench"
description = "Benchmarks for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
entidb_core.workspace = true
entidb_storage.workspace = true
entidb_codec.workspace = true
criterion.workspace = true
rand.workspace = true
tempfile.workspace = true

[[bench]]
name = "database"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "storage"
harness = false

[lints]
workspace = true
