[package]
name = "entidb_cli"
description = "CLI tools for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["database", "cli", "tools", "maintenance", "debugging"]
categories = ["command-line-utilities", "database-implementations"]

[[bin]]
name = "entidb"
path = "src/main.rs"

[dependencies]
entidb_core.workspace = true
entidb_storage.workspace = true
entidb_codec.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
