[package]
name = "entidb_core"
description = "Core database engine for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["database", "embedded", "entity", "nosql", "cbor"]
categories = ["database-implementations", "data-structures"]
readme = "README.md"

[features]
default = ["std"]
std = ["dep:fs2"]
encryption = ["dep:aes-gcm", "dep:rand", "dep:zeroize", "dep:hkdf", "dep:sha2"]

[dependencies]
entidb_storage.workspace = true
entidb_codec.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tracing.workspace = true
sha2 = { workspace = true, optional = true }
fs2 = { workspace = true, optional = true }

# Optional encryption dependencies
aes-gcm = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
aes-gcm.workspace = true
rand.workspace = true
zeroize.workspace = true

[lints]
workspace = true
