[package]
name = "entidb_ffi"
description = "Stable C ABI for EntiDB bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
entidb_core.workspace = true
thiserror.workspace = true

[lints]
workspace = true
