[package]
name = "entidb_ffi"
description = "Stable C ABI for EntiDB bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["encryption"]
encryption = ["entidb_core/encryption"]

[dependencies]
entidb_core.workspace = true
entidb_storage.workspace = true
thiserror.workspace = true

# FFI requires unsafe code - override workspace lint
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
