[package]
name = "entidb_storage"
description = "Storage backend trait and implementations for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["storage", "backend", "database", "file-system"]
categories = ["database-implementations", "filesystem"]
readme = "README.md"

[dependencies]
thiserror.workspace = true
parking_lot.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
