[package]
name = "entidb_sync_engine"
description = "Sync state machine and engine for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["database", "sync", "offline-first", "replication", "state-machine"]
categories = ["database-implementations", "asynchronous"]

[dependencies]
entidb_core.workspace = true
entidb_sync_protocol.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
entidb_sync_server.workspace = true

[lints]
workspace = true
