[package]
name = "entidb_testkit"
description = "Test utilities for EntiDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["database", "testing", "test-utilities", "fuzzing", "property-testing"]
categories = ["development-tools::testing", "database-implementations"]

[dependencies]
entidb_storage.workspace = true
entidb_codec.workspace = true
entidb_core.workspace = true
tempfile.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
