[package]
name = "rust_expenses"
version = "2.0.0-alpha.3"
edition = "2021"
publish = false
description = "Personal Expense Tracker example demonstrating multi-collection relationships"

[dependencies]
entidb_core.workspace = true
entidb_codec.workspace = true
entidb_storage.workspace = true

[[bin]]
name = "expenses"
path = "main.rs"
