[package]
name = "rust_notes"
version = "2.0.0-alpha.1"
edition = "2021"
publish = false
description = "EntiDB Notes Example - demonstrates complex entities and filtering"

[dependencies]
entidb_core = { path = "../../crates/entidb_core" }
entidb_codec = { path = "../../crates/entidb_codec" }
entidb_storage = { path = "../../crates/entidb_storage" }

[[bin]]
name = "notes"
path = "main.rs"
