[package]
name = "rust_notes"
version = "2.0.0-alpha.1"
edition = "2021"
publish = false
description = "EntiDB Notes Example - demonstrates complex entities and filtering"

[dependencies]
entidb_core = "2.0.0-alpha.1"
entidb_codec = "2.0.0-alpha.1"
entidb_storage = "2.0.0-alpha.1"

[[bin]]
name = "notes"
path = "main.rs"
