[package]
name = "rust_notes"
version = "2.0.0-alpha.3"
edition = "2021"
publish = false
description = "EntiDB Notes Example - demonstrates complex entities and filtering"

[dependencies]
entidb_core.workspace = true
entidb_codec.workspace = true
entidb_storage.workspace = true

[[bin]]
name = "notes"
path = "main.rs"
