[package]
name = "rust_todo"
version = "2.0.0-alpha.1"
edition = "2021"
publish = false
description = "EntiDB Todo Example - demonstrates core functionality"

[dependencies]
entidb_core = { path = "../../crates/entidb_core" }
entidb_codec = { path = "../../crates/entidb_codec" }
entidb_storage = { path = "../../crates/entidb_storage" }

[[bin]]
name = "todo"
path = "main.rs"
