[package]
name = "rust_todo"
version = "2.0.0-alpha.1"
edition = "2021"
publish = false
description = "EntiDB Todo Example - demonstrates core functionality"

[dependencies]
entidb_core = "2.0.0-alpha.1"
entidb_codec = "2.0.0-alpha.1"
entidb_storage = "2.0.0-alpha.1"

[[bin]]
name = "todo"
path = "main.rs"
