[package]
name = "rust_todo"
version = "2.0.0-alpha.3"
edition = "2021"
publish = false
description = "EntiDB Todo Example - demonstrates core functionality"

[dependencies]
entidb_core.workspace = true
entidb_codec.workspace = true
entidb_storage.workspace = true

[[bin]]
name = "todo"
path = "main.rs"
