[package]
name = "entidb_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "entidb"
crate-type = ["cdylib"]

[features]
default = ["encryption"]
encryption = ["entidb_core/encryption"]

[dependencies]
entidb_core.workspace = true
entidb_storage.workspace = true
pyo3.workspace = true
